# tools_zhq

./: README.md  camera.py  change_RGB.py  change_RGB_s.py  change_picture.py  choice_picture.py  dele_diffientinimgtxt.py  find_error_label.py  generate_anchors.py  imageset.py  light.py  mp4tjpg.py  no_bn.py  no_bn_scale.py  read_rosbag2img.py  readcaffe.py  readxml.py  readxml_and.py  readxml_small.py  rename.py  rename_image.py  rename_image_.py  run_readxml_small.sh  txttojpg.py  xmltotxt.py
3d_xihua_percetion/catkin_ws/src/src/: img_viewer.cpp
BAIDU/: dele(删除两个文件夹中不同的).py  imageset.py  readxml.py  txttoxml.py  同时更改images和labels.py
LISA/: csctotxt_normal.py  csv2.py  csvtotxt.py  draw.py  readcsv.py  small.py
TL_SSD/: change_xml.py  readxml.py  readyml.py  readyml_bigger.py  readyml_new.py  readyml_txt.py  txttoxml.py  yamltotxt.py
match_3/: CMakeLists.txt  stereo_match (copy).cpp  stereo_match.cpp
publish_pcd/: README.md
publish_pcd/src/: package.xml
publish_pcd/src/src/: img_viewer.cpp
road/: README.md  img_process.py  run_get_point.sh  run_img_process.sh
road/data/: 1.pcd  cloud_cluster_0.pcd  cloud_cluster_1.pcd  cloud_cluster_2.pcd  cloud_cluster_3.pcd  cloud_cluster_4.pcd  cloud_cluster_5.pcd  cloud_cluster_6.pcd  hongcao_1.txt
road/get_point/devel/: .catkin  .rosinstall  setup.sh
road/get_point/src/: CMakeLists.txt  get_point.cpp
road/pcl_segmentation/: .1.pcd.swp
road/result/: point.txt
road/txt2pcd/devel/: .catkin  .rosinstall  setup.sh
road/txt2pcd/src/: CMakeLists.txt
road/txt2pcd/src/src/: img_viewer.cpp
(+1 files in other folders)
